feat: add PATCH endpoints and update methods for various controllers and use cases
- Implemented PATCH endpoints in EmployeeController, InventoryMovementController, OrderController, PaymentController, ProductController, PurchaseOrderController, ReservationController, RestaurantTableController, StockController, SupplierController, TableOccupationController, TaxController, and UnitTypeController.
- Added update methods in corresponding use cases (AllergenUseCase, CashDrawerUseCase, CategoryUseCase, DishUseCase, EmployeeUseCase, InventoryMovementUseCase, OrderUseCase, PaymentUseCase, ProductUseCase, PurchaseOrderUseCase, ReservationUseCase, RestaurantTableUseCase, StockUseCase, SupplierUseCase, TableOccupationUseCase, TaxUseCase, UnitTypeUseCase).
- Introduced PatchUtils for copying non-null properties during updates.
- Enhanced DishRepository and ProductRepository with new methods for fetching dishes and products with ingredients and by type respectively.
- Updated DishAdapter and ProductAdapter to support new repository methods and handle ingredient fetching.
- Created DishIngredientEntityRepository for managing dish ingredients in the database.